--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,9 +4,9 @@ plugins {
 }
 
 android {
-    compileSdkVersion 33
 
     defaultConfig {
+        compileSdk 33
         applicationId "com.example.auth"
         minSdkVersion 24
         targetSdkVersion 33
@@ -60,6 +60,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'io.reactivex:rxjava:1.0.10'
     implementation 'com.google.api-client:google-api-client:2.2.0'
+    implementation 'com.google.apis:google-api-services-drive:v2-rev393-1.25.0'
     implementation ('com.google.apis:google-api-services-drive:v3-rev203-1.25.0') {
         exclude group: 'com.google.guava' }
         implementation('com.google.apis:google-api-services-drive:v3-rev197-1.25.0') {
