Stworzenie dwóch nowych dashboard'ów: "Pomiary BLE" oraz "Analiza wyników". W części poświęconej analizie wyników: dodanie listy rozwijanej z zapisanymi sesjami pomiarowymi danego użytkownika w Firebase

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,9 @@
         <activity android:name=".SignUpActivity"/>
         <activity android:name=".DashboardActivity"/>
         <activity android:name=".HeartRateMeasurementActivity"/>
+        <activity android:name=".ResultAnalysisActivity" />
+        <activity android:name=".BLEMeasurementActivity" />
+
 
     </application>
 </manifest>
