Dodanie plików HeartAnalysis.java i heart_analysis.xml pozwalających na generowanie i wyświetlanie wykresów z analizą pomiarów tętna

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".Menu"/>
         <activity android:name=".MeasureManager"/>
         <activity android:name=".GlucoseAnalysis" />
+        <activity android:name=".HeartAnalysis" />
         <activity android:name=".BLEMeasure" />
 
 
