Utworzenie plików DownloadResults.java i download_results.xml, które obsłużą integrację z Google Drive oraz umożliwią zapisywanie sesji pomiarowej do dysku chmurowego w postaci pliku JSON

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity android:name=".MeasureManager"/>
         <activity android:name=".GlucoseAnalysis" />
         <activity android:name=".HeartAnalysis" />
+        <activity android:name=".DownloadResults" />
         <activity android:name=".BLEMeasure" />
 
 
