--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
 
         <activity android:name=".SignUp"/>
         <activity android:name=".Menu"/>
-        <activity android:name=".MeasureManager"/>
+        <activity android:name=".ManualMeasure"/>
         <activity android:name=".GlucoseAnalysis" />
         <activity android:name=".HeartAnalysis" />
         <activity android:name=".DownloadResults" />
