--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation("com.microsoft.identity.client:msal:4.0.5") { exclude group: 'com.microsoft.device.display' }
     implementation('com.google.apis:google-api-services-drive:v3-rev136-1.25.0')
     implementation('com.google.apis:google-api-services-drive:v3-rev197-1.25.0')
+    implementation 'com.google.code.gson:gson:2.8.8'
     testImplementation 'junit:junit:4.13.2'
 }
 
