Poprawa sposobu wyświetlania wykresów: dodanie progów liniowych - dolnego i górnego - do odnajdywania wyników pomiarów wychodzących poza normę

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation('com.google.apis:google-api-services-drive:v3-rev197-1.25.0')
     implementation 'com.google.code.gson:gson:2.8.8'
     testImplementation 'junit:junit:4.13.2'
+    implementation 'org.json:json:20210307'
 }
 
 
